src/test/ui/parser/associated-types-project-from-hrtb-explicit.stderr
error: expected identifier, found keyword `for`
  --> $DIR/associated-types-project-from-hrtb-explicit.rs:10:21
   |
LL | fn foo2<I>(x: <I as for<'x> Foo<&'x isize>>::A)
   |                     ^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | fn foo2<I>(x: <I as r#for<'x> Foo<&'x isize>>::A)
   |                     ^^^^^

error: expected one of `::` or `>`, found `Foo`
  --> $DIR/associated-types-project-from-hrtb-explicit.rs:10:29
   |
LL | fn foo2<I>(x: <I as for<'x> Foo<&'x isize>>::A)
   |                             ^^^ expected one of `::` or `>` here

error: aborting due to 2 previous errors

